more minor fixes

--- a/characters.tex
+++ b/characters.tex
@@ -62,7 +62,7 @@ This follows from the fact that \(\Q \otimes E^*\) is a flat \(E^*\)-algebra. Wh
 \[
 \Q \otimes E^*(BA)
 \]
-is free as a \(\Q \otimes E^*\)-module of rank \(p^{k_1d + \ldots + k_id}\). However, \[H(\Q \otimes E^0)P^*(BA) \cong \Q \otimes E^*\] is free of rank \(1\), a direct consequence of Machke's theorem.
+is free as a \(\Q \otimes E^*\)-module of rank \(p^{k_1d + \ldots + k_id}\). However, \[H(\Q \otimes E^0)P^*(BA) \cong \Q \otimes E^*\] is free of rank \(1\), a direct consequence of Maschke's theorem.
 
 To explain one of the inputs into the main theorem of this Lecture, we need one more notion. For \(G\) a finite group, a \(G\)--CW complex \(X\) is a \(G\)--space built inductively by attaching ``cells'' of the form \((G/H) \times D^n\), as in the following pushout diagram:
 \begin{center}
@@ -87,7 +87,7 @@ X_{hG} \simeq EG \times_G X = (EG \times X)/G
 \]
 is the homotopy orbits for the \(G\)-action on \(X\). The resulting equivariant cohomology theory is called \textit{Borel equivariant \(E\)--theory}.
 
-The purpose of this Case Study is to explain, in the case of \(E = E_{\Gamma}\), how to extend the above formula \[\Q \otimes E^*(X) \cong H(\Q \otimes E^0)P^*(X),\] originally stated for finite complexes \(X\), to an analogous formula for finite \(G\)--CW complexes. Said another way, for each finite group, we want to approximate Borel equivariant \(E\)--cohomology (restricted to finite \(G\)--CW complexes) by some version of Borel equivariant rational cohomology. We call this ``the approximation problem".  In particular, this encompasses our original goal of understanding \(E^*(B\Sigma_n)\), as it appears as a special case of Borel equivariant cohomology as in the formula \[E^*(B\Sigma_n) = E_{\Sigma_n}^*((G/G) \times *).\]
+The purpose of this Case Study is to explain, in the case of \(E = E_{\Gamma}\), how to extend the above formula \[\Q \otimes E^*(X) \cong H(\Q \otimes E^0)P^*(X),\] originally stated for finite complexes \(X\), to an analogous formula for finite \(G\)--CW complexes. Said another way, for each finite group, we want to approximate Borel equivariant \(E\)--cohomology (restricted to finite \(G\)--CW complexes) by some version of Borel equivariant rational cohomology. We call this ``the approximation problem".  In particular, this encompasses our original goal of understanding \(E^*(B\Sigma_n)\), as it appears as a special case of Borel equivariant cohomology as in the formula \[E^*(B\Sigma_n) = E_{\Sigma_n}^*((\Sigma_n / \Sigma_n) \times *).\]
 
 \subsection*{Formal Geometry}
 
@@ -106,7 +106,7 @@ and that the \(p\)--divisible group associated to \(\G\) can be formed using the
 %\[
 %BS^1[p]_{E} \hookrightarrow BS^1[p^2]_{E} \hookrightarrow \ldots.
 %\]
-\Cref{app:cyclic} also implies that all of the schemes in this system are finite flat commutative groups schemes over \(\Spf E^0\). The \(p\)--divisible group is called ``height \(d\)'' because \(\G[p]\) is a finite group scheme of order \(p^d\) or, equivalently, since \(E^0(BC_p)\) has rank \(p^d\) as a free module over \(E^0\).
+\Cref{app:cyclic} also implies that all of the schemes in this system are finite flat commutative group schemes over \(\Spf E^0\). The \(p\)--divisible group is called ``height \(d\)'' because \(\G[p]\) is a finite group scheme of order \(p^d\) or, equivalently, since \(E^0(BC_p)\) has rank \(p^d\) as a free module over \(E^0\).
 
 There are \(p\)--divisible groups that are \emph{not} built from formal groups, and the simplest of these plays a role in this story.  We define the \textit{constant \(p\)--divisible group of height \(1\)} to be 
 \[
@@ -187,7 +187,7 @@ and
 \Spec(R) \times_{\Spec(E^0)} \InternalHom{FormalGroups}(A^*, \G[p^k]) & \cong \InternalHom{FormalGroups}(A^*, \Lambda_{k}^*) \\
 & \cong A^{\times d}.
 \end{align*}
-That is, we would be able to give the simplest answer imaginable: we will have approximated \(E^0(BA)\) by the \(HRP\)-cohomology of a collection of points. In next section we construct a \(\Q \otimes E^0\)-algebra \(C_0\) with this property.
+That is, we would be able to give the simplest answer imaginable: we will have approximated \(E^0(BA)\) by the \(HRP\)-cohomology of a collection of points. In the next section we construct a \(\Q \otimes E^0\)-algebra \(C_0\) with this property.
 
 
 %Let \(\Lk = (\Z/p^k)^n\) so that there are canonical isomorphisms
@@ -225,15 +225,15 @@ This does not uniquely specify \(C_0\), but we can fix this deficiency by asking
 \[
 u \co \Lambda^* \xrightarrow{\cong} \Spec(C_0) \times_{\Spec(E^0)} \G[p^\infty].
 \]
-This means that, given any \(E^0\)--algebra \(R\) and an isomorphism of \(p\)--divisible groups
+This means that, given any \(E^0\)--algebra \(T\) and an isomorphism of \(p\)--divisible groups
 \[
-f \co \Lambda^* \xrightarrow{\cong} \Spec(R) \times_{\Spec(E^0)} \G[p^\infty],
+f \co \Lambda^* \xrightarrow{\cong} \Spec(T) \times_{\Spec(E^0)} \G[p^\infty],
 \]
 there is a unique map of \(E^0\)--algebras
 \[
-C_0 \xrightarrow{u_f} R
+C_0 \xrightarrow{u_f} T
 \]
-such that \(f = \Spec(R) \times_{\Spec(C_0)} u\), where the pullback is along \(u_f\).
+such that \(f = \Spec(T) \times_{\Spec(C_0)} u\), where the pullback is along \(u_f\).
 
 The idea of the construction of \(C_0\) is quite simple.  \Cref{app:abeliangroupdualhom} implies \[E^0(B\Lk) \cong \sheaf O(\InternalHom{FormalGroups}(\Lk^*,\G[p^k])).\]  To construct \(C_0\), it suffices to understand the open subscheme of the mapping scheme \(\InternalHom{FormalGroups}(\Lk^*,\G[p^k])\) which consists of the homomorphisms that are isomorphisms. 
 
@@ -370,7 +370,7 @@ Let us work out \(C_0\) in the case of $p$-complete $K$-theory \(E_{\G_m} = KU_p
 \[
 \G = \G_m,
 \]
-the formal multiplicative group over \(\Z_p\).  Because \(\G_m\) is the formal completion of the multiplicative group scheme \(\mathbb G_m\) and the base ring is \(p\)--complete, we have
+is the formal multiplicative group over \(\Z_p\).  Because \(\G_m\) is the formal completion of the multiplicative group scheme \(\mathbb G_m\) and the base ring is \(p\)--complete, we have
 \[
 \G_m[p^k] \cong \mathbb{G}_m[p^k].
 \]
@@ -396,7 +396,7 @@ There is the factorization
 \[
 x^{p^k}-1 = \prod_{i=1,\ldots,k}\Phi_{p^i}(x),
 \]
-where \(\Phi_{p^i}(x)\) is the \(p^i\)th cyclotomic polynomial. But
+where \(\Phi_{p^i}(x)\) is the \((p^i)\){\th} cyclotomic polynomial. But
 \[
 x^{p^{k-1}}-1 = \prod_{i=1,\ldots,(k-1)}\Phi_{p^i}(x)
 \]
@@ -428,7 +428,7 @@ But \(\Q_p[x]/(\Phi_{p^k}(x))\) is a field so the canonical map
 \[
 \Q_p[x]/(\Phi_{p^k}(x)) \xrightarrow{\cong} (x^{p^{k-1}}-1)^{-1}\Q_p[x]/(x^{p^k}-1)
 \]
-is an isomorphism. Thus \(C_{0,k}\) is just \(\Q_p\) adjoin a primitive \(p^k\)th root of unity and
+is an isomorphism. Thus \(C_{0,k}\) is just \(\Q_p\) adjoin a primitive \((p^k)\){\th} root of unity and
 \[
 C_0 = \colim_k C_{0,k} \cong \colim_k \Q_p(\zeta_{p^k})
 \]
@@ -513,7 +513,7 @@ are the projection and action maps, respectively.
 
 %where the maps are the source and target maps (of course there are also composition, inverse, and identity maps). 
 
-The category of topological groupoids is easy to enrich in spaces, the mapping space between two topological groupoids is just the subspace of the product of the space of maps between the objects and the space of maps between the morphisms that are maps of topological groupoids. 
+The category of topological groupoids is easy to enrich in spaces: the mapping space between two topological groupoids is the subspace of the product of the space of maps between the objects and the space of maps between the morphisms that are maps of topological groupoids. 
 
 This construction can be upgraded further to an enrichment in topological groupoids so that the object space is the mapping space described above. Let \([\underline{1}] := (0 \rightarrow 1)\) be the free-standing isomorphism and let \([\underline{0}]\) be the category with one object and only the identity morphism. There are two functors 
 \[
@@ -661,11 +661,11 @@ Let \(X\) be a finite \(G\)--CW complex and let \(V \rightarrow X\) be a \(G\)--
 \[
 EG \times_G \Flag(V) \simeq \Flag(EG \times_G V)
 \]
-of spaces over \(EG \times_G X\).
+of spaces over \(EG \times_G X\). \qed
 \end{proposition}
 
 \begin{proposition} \label{app:inertiaflags}
-Let \(X\) be a finite \(G\)--CW complex and let \(V \rightarrow X\) be a \(G\)--equivariant vector bundle, then \(\Flag(V)^A\) is a disjoint union of fiber products of flag bundles over \(X^A\) when \(A \subseteq G\) is abelian.
+Let \(X\) be a finite \(G\)--CW complex and let \(V \rightarrow X\) be a \(G\)--equivariant vector bundle, then \(\Flag(V)^A\) is a disjoint union of fiber products of flag bundles over \(X^A\) when \(A \subseteq G\) is abelian. \qed
 \end{proposition}
 
 Recall from \Cref{StrictCechDescentRemark} that a commutative ring map \(R \rightarrow S\) gives rise to a cosimplicial commutative ring
@@ -719,7 +719,7 @@ is an \(n\)--dimensional vector bundle over \(EG \times_G X\) and
 Since \(E^{*}_{G}(X) = E^*(EG \times_G X)\) can be recovered from the flag bundle as above, these equivalences show that \(E^*(EG \times_G X)\) can be recovered from spaces with fixed points only for abelian subgroups. 
 
 \begin{proposition} \label{app:codescent}
-Let \(g \colon E_{G}^*(-) \rightarrow F_{G}^*(-)\) be a map of Borel equivariant cohomology theories on finite \(G\)-CW complexes satisfying complex oriented descent, then \(g\) is an isomorphism if and only if it is an isomorphism when applied to spaces of the form \(X = G/A\) for \(A \subset G\) abelian.
+Let \(g \colon E_{G}^*(-) \rightarrow F_{G}^*(-)\) be a map of Borel equivariant cohomology theories on finite \(G\)-CW complexes satisfying complex oriented descent, then \(g\) is an isomorphism if and only if it is an isomorphism when applied to spaces of the form \(X = G/A\) for \(A \subset G\) abelian. \qed
 \end{proposition}
 
 %We are interested in applying complex oriented descent to two cohomology theories, \(E = (E_{\Gamma})^*(EG \times_G -)\) and \(F = HC_0^*(EG \times_G \Fix_n(-))\). To apply complex oriented descent to \(HC_0^*(EG \times_G \Fix_n(-))\) we need a result regarding fixed points of bundles.
