--- a/preamble.tex
+++ b/preamble.tex
@@ -287,6 +287,7 @@
 \newcommand{\spin}{\mathit{spin}}
 \newcommand{\EinftyRings}{E_\infty\CatOf{RingSpectra}}
 \newcommand{\dx}{\operatorname{d\mathit{x}}}
+\newcommand{\cts}{\mathrm{cts}}
 
 \DeclareMathOperator{\Fix}{Fix}
 \DeclareMathOperator{\Flag}{Flag}
