--- a/finite.tex
+++ b/finite.tex
@@ -476,7 +476,7 @@ Once this is achieved, we can apply \Cref{MfglIsSmooth} to a surjective map of r
 A map \(\G\co \Spec R \to \moduli{fg}\) lifts to \(\moduli{fgl}\) exactly when the Lie algebra \(T_0 \G\) of \(\G\) is isomorphic to \(R\).
 \end{lemma}
 \begin{proof}
-Certainly if \(\G\) admits a global coordinate, then \(T_0 \G \cong R\).  Conversely, the formal group \(\G\) is at least locally isomorphic to \(\A^1\) by a covering \[i_\alpha\co X_\alpha \to \Spec R\] and isomorphisms \[\phi_\alpha\co i_\alpha^* \G \cong \A^1.\]  However, \textit{a priori}, these isomorphisms may not glue, corresponding to the potential nontriviality of the {\Cech} \(1\)--cocycle \[[\phi_\alpha] \in \check{H}^1(\Spec R; \moduli{ps}^{\gpd}).\]  The group scheme \(\moduli{ps}^{\gpd}\) is populated by \(T\)--points of the form \[\moduli{ps}^{\gpd}(T) = \left\{ t_0 x + t_1 x^2 + t_2 x^3 + \cdots \mid t_j \in T, t_0 \in T^\times \right\},\] and it is admits a filtration by the closed subschemes \[\moduli{ps}^{\gpd, \ge N}(T) = \left\{ 1 \cdot x + t_N x^{N+1} + t_{N+1} x^{N+2} + \cdots \mid t_j \in T \right\}.\]  The associated graded of this filtration is \(\Gm \times \mathbb G_a^{\times \infty}\), and hence the filtration spectral sequence shows \[\check{H}^1(\Spec R; \moduli{ps}^{\gpd}) \xrightarrow{\simeq} \check{H}^1(\Spec R; \Gm),\] as \(\check{H}^1(\Spec R; \mathbb G_a) = 0\) for all affine schemes.  Finally, given a choice\footnote{Incidentally, a choice of trivialization of \(T_0 \G\) exactly resolves the indeterminacy of \(\log'(0)\) baked in to \Cref{RationalFGLsHaveLogarithms}.} of trivialization \(T_0 \G \cong R\), this induces compatible trivializations of \(T_0 i_\alpha^* \G\), which we can use to rescale the isomorphisms \(\phi_\alpha\) so that their image in \(\check{H}^1(\Spec R; \Gm)\) vanishes, and hence \([\phi_\alpha]\) is induced from a class in \[\check{H}^1(\Spec R; \moduli{ps}^{\gpd, \ge 1}).\]  This obstruction group vanishes.
+Certainly if \(\G\) admits a global coordinate, then \(T_0 \G \cong R\).  Conversely, the formal group \(\G\) is at least locally isomorphic to \(\A^1\) by a covering \[i_\alpha\co X_\alpha \to \Spec R\] and isomorphisms \[\phi_\alpha\co i_\alpha^* \G \cong \A^1.\]  However, \textit{a priori}, these isomorphisms may not glue, corresponding to the potential nontriviality of the {\Cech} \(1\)--cocycle \[[\phi_\alpha] \in \check{H}^1(\Spec R; \InternalAut{\A^1}).\]  The group scheme \(\InternalAut{\A^1}\) is populated by \(T\)--points of the form \[(\InternalAut{\A^1})(T) = \left\{ t_0 x + t_1 x^2 + t_2 x^3 + \cdots \mid t_j \in T, t_0 \in T^\times \right\},\] and it is admits a filtration by the closed subschemes \[(\InternalAut{\A^1})^{\ge N}(T) = \left\{ 1 \cdot x + t_N x^{N+1} + t_{N+1} x^{N+2} + \cdots \mid t_j \in T \right\}.\]  The associated graded of this filtration is \(\Gm \times \mathbb G_a^{\times \infty}\), and hence the filtration spectral sequence shows \[\check{H}^1(\Spec R; \InternalAut{\A^1}) \xrightarrow{\simeq} \check{H}^1(\Spec R; \Gm),\] as \(\check{H}^1(\Spec R; \mathbb G_a) = 0\) for all affine schemes.  Finally, given a choice\footnote{Incidentally, a choice of trivialization of \(T_0 \G\) exactly resolves the indeterminacy of \(\log'(0)\) baked in to \Cref{RationalFGLsHaveLogarithms}.} of trivialization \(T_0 \G \cong R\), this induces compatible trivializations of \(T_0 i_\alpha^* \G\), which we can use to rescale the isomorphisms \(\phi_\alpha\) so that their image in \(\check{H}^1(\Spec R; \Gm)\) vanishes, and hence \([\phi_\alpha]\) is induced from a class in \[\check{H}^1(\Spec R; (\InternalAut{\A^1})^{\ge 1}).\]  This obstruction group vanishes.
 \end{proof}
 
 \begin{example}
@@ -484,7 +484,7 @@ In light of \Cref{CoordinatizbleFGs}, it is easy to produce examples of ``non-co
 \end{example}
 
 \begin{remark}\label{StrictIsosRemark}
-The subgroup scheme \(\moduli{ps}^{\gpd, \ge 1}\) is often referred to in the literature as the group of \index{formal group!strict isomorphism}\textit{strict isomorphisms}.  There is an associated moduli of formal groups identified only up to strict isomorphism, which sits in a fiber sequence \[\Gm \to \moduli{fgl} \mmod \moduli{ps}^{\gpd, \ge 1} \to \moduli{fg}.\]  These appeared earlier in this Lecture as well: in the proof of \Cref{LazardsTheorem}, we constructed over \(L\) the universal formal group law equipped with a \emph{strict} \index{formal group!exponential}exponential map.  The moduli of formal group laws modulo strict isomorphisms appears as the context associated to the graded version, rather than even-periodic version, of the story told so far---i.e., as a sort of non-periodic context \(\context{MU}\).
+The subgroup scheme \((\InternalAut{\A^1})^{\ge 1}\) is often referred to in the literature as the group of \index{formal group!strict isomorphism}\textit{strict isomorphisms}.  There is an associated moduli of formal groups identified only up to strict isomorphism, which sits in a fiber sequence \[\Gm \to \moduli{fgl} \mmod (\InternalAut{\A^1})^{\ge 1} \to \moduli{fg}.\]  These appeared earlier in this Lecture as well: in the proof of \Cref{LazardsTheorem}, we constructed over \(L\) the universal formal group law equipped with a \emph{strict} \index{formal group!exponential}exponential map.  The moduli of formal group laws modulo strict isomorphisms appears as the context associated to the graded version, rather than even-periodic version, of the story told so far---i.e., as a sort of non-periodic context \(\context{MU}\).
 \end{remark}
 
 
@@ -971,7 +971,7 @@ P \arrow{d} \arrow["f'"]{r} \arrow[dr, phantom, "\lrcorner", very near start] & 
 \Spec R \arrow["f"]{r} & \moduli{fg}.
 \end{tikzcd}
 \end{center}
-If \(f^* \context{MU}(X)\) defines a homology functor \(R_0(X)\), then \({f'}^* \context{MU}(X)\) gives a model for \((MU \sm R)_0(X)\).  In fact, \({f'}^* \context{MU}(X)\) \emph{always} defines a homology functor, \emph{regardless} of the exactness of \(f^*\).  This observation allows us to rephrase the conditions under which \(f^*\) defines a homology functor: we can always recognize \(f^* \moduli{fg}(X)\) by equalizing the maps \[s, t\co (\moduli{fgl} \times \moduli{ps}^{\gpd}) \to \moduli{fgl}.\]  In general, forming this equalizer does not preserve exact sequences.  However, in the Landweber case, where \(f\) is flat and there is a lift \(\widetilde f\co \Spec R \to \moduli{fgl}\), then this equalizer becomes \emph{forked} (i.e., we gain an extra degeneracy in the simplicial object), and the equalizer is thus guaranteed to be exact.
+If \(f^* \context{MU}(X)\) defines a homology functor \(R_0(X)\), then \({f'}^* \context{MU}(X)\) gives a model for \((MU \sm R)_0(X)\).  In fact, \({f'}^* \context{MU}(X)\) \emph{always} defines a homology functor, \emph{regardless} of the exactness of \(f^*\).  This observation allows us to rephrase the conditions under which \(f^*\) defines a homology functor: we can always recognize \(f^* \moduli{fg}(X)\) by equalizing the maps \[s, t\co (\moduli{fgl} \times \InternalAut{\A^1}) \to \moduli{fgl}.\]  In general, forming this equalizer does not preserve exact sequences.  However, in the Landweber case, where \(f\) is flat and there is a lift \(\widetilde f\co \Spec R \to \moduli{fgl}\), then this equalizer becomes \emph{forked} (i.e., we gain an extra degeneracy in the simplicial object), and the equalizer is thus guaranteed to be exact.
 \end{remark}
 
 \begin{definition}\label{DefnChromaticHomologyThys}
